src/test/ui/issues/issue-18919.stderr
error[E0277]: the size for values of type `dyn for<'r> std::ops::Fn(&'r isize) -> isize` cannot be known at compilation time
  --> $DIR/issue-18919.rs:3:1
   |
LL | / fn ho_func(f: Option<FuncType>) {
LL | |
LL | | }
   | |_^ doesn't have a size known at compile-time
   |
   = help: the trait `std::marker::Sized` is not implemented for `dyn for<'r> std::ops::Fn(&'r isize) -> isize`
   = note: to learn more, visit <https://doc.rust-lang.org/book/ch19-04-advanced-types.html#dynamically-sized-types-and-the-sized-trait>
   = note: required by `std::option::Option`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
