src/test/ui/issues/issue-18919.rs
type FuncType<'f> = dyn Fn(&isize) -> isize + 'f;

fn ho_func(f: Option<FuncType>) {
    //~^ ERROR the size for values of type
}

fn main() {}
